Make some space for attribute bonus.

--- a/character_sheet/css/main.css
+++ b/character_sheet/css/main.css
@@ -1,3 +1,7 @@
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+.char-attributes .form-horizontal .control-label {
+  width: 120px; }
+.char-attributes .form-horizontal .controls {
+  margin-left: 140px; }
