--- a/character_sheet/css/main.scss
+++ b/character_sheet/css/main.scss
@@ -4,6 +4,16 @@
    Author's custom styles
    ========================================================================== */
 
+.char-attributes {
+    .form-horizontal {
+        .control-label {
+            width: 120px;
+        }
+        .controls {
+            margin-left: 140px;
+        }
+    }
+}
 
 
 
